Added home and user_profile with server request

--- a/project/public/styles/beta_test.css
+++ b/project/public/styles/beta_test.css
@@ -55,3 +55,8 @@ a {
 html, body{
   height: 100%;
 }
+
+.dropdown-menu > li > a:hover {
+  background-image: none !important;
+  background-color: black !important;
+}
