--- a/project/public/styles/index.css
+++ b/project/public/styles/index.css
@@ -24,6 +24,10 @@ main {
     max-height: 500px;
 }
 
+.width-300 {
+    width: 350px;
+}
+
 .max-width-300 {
     max-width: 300px;
 }
@@ -34,6 +38,10 @@ main {
 
 .max-width-600 {
     max-width: 600px;
+}
+
+.max-width-900 {
+    max-width: 900px;
 }
 
 .displ-content {
