--- a/project/public/styles/index.css
+++ b/project/public/styles/index.css
@@ -24,12 +24,20 @@ p {
     height: 200%;
 }
 
+.min-h-100{
+    min-height: 100vh;
+}
+
 .max-height-set-500 {
     max-height: 500px;
 }
 
 .width-300 {
     width: 350px;
+}
+
+.max-width-200 {
+    max-width: 200px;
 }
 
 .max-width-300 {
@@ -46,6 +54,10 @@ p {
 
 .max-width-900 {
     max-width: 900px;
+}
+
+.max-width-40-percent{
+    max-width: 40%;
 }
 
 .th-width {
@@ -79,65 +91,24 @@ p {
     flex: 1 1 0px
 }
 
-.zoom-on-hover img {
-    -webkit-transition: all 0.3s linear;
-    -moz-transition: all 0.3s linear;
-    -ms-transition: all 0.3s linear;
-    -o-transition: all 0.3s linear;
-    transition: all 0.3s linear;
+.lobby-button {
+    border-color: #67747e;
+    color: #67747e;
 }
 
-.zoom-on-hover:hover img {
-    -webkit-transform: scale(1.2);
-    -moz-transform: scale(1.2);
-    -ms-transform: scale(1.2);
-    -o-transform: scale(1.2);
-    transform: scale(1.2);
-}
-
-.avatar-size-lobby {
-    max-width: 200px;
-    max-height: 200px;
+.lobby-button:hover {
+    background-color: #505a62;
+    border-color: #505a62;
+    color: #f8f9fa;
 }
 
 #pageTwo {
     background-color: darkslategray;
 }
 
-.lobby-button {
-    border-color: #3E9689;
-    color: #3E9689;
-}
-
-.lobby-button:hover {
-    background-color: #3E9689;
-    color: black;
-}
-
 .tr-user-profile {
     border-bottom-color: #141414;
     border-bottom-width: 3px;
-}
-
-
-.tr-user-profile-1 {
-    background-color: #4A2626;
-}
-
-.tr-user-profile-2 {
-    background-color: #502826;
-}
-
-.tr-user-profile-3 {
-    background-color: #552a26;
-}
-
-.tr-user-profile-4 {
-    background-color: #5b2c26;
-}
-
-.tr-user-profile-5 {
-    background-color: #612e26;
 }
 
 ::-webkit-scrollbar {
