--- a/project/public/styles/play.css
+++ b/project/public/styles/play.css
@@ -27,12 +27,25 @@
 }
 
 .card-size {
-    /*height: 16%;*/
-    width: 105px;
-    height: 105px;
-    padding: 0;
-    margin: 00.25rem;
+    position: relative;
+    width: 13.9%;
+    padding: 0px;
+    padding-bottom: 13.9%;
+    max-height: 13.9%;
+    margin: 0.2rem;
 }
+
+@media (min-width: 576px) {
+    .card-size {
+        position: relative;
+        width: 8%;
+        padding: 0px;
+        padding-bottom: 8%;
+        max-height: 8%;
+        margin: 0.2rem;
+    }
+}
+
 
 .card-image {
     width: 100%;
@@ -71,10 +84,10 @@
 }
 
 .zoom-card-on-turn {
-    -webkit-transform: scale(1.1);
-    -moz-transform: scale(1.1);
-    -o-transform: scale(1.1);
-    transform: scale(1.1);
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -o-transform: scale(1.2);
+    transform: scale(1.2);
 
     z-index: 500;
 }
@@ -111,6 +124,7 @@
 
 #gameID {
     cursor: copy;
+    font-weight: 500;
 }
 
 #chat-content {
